# RL-Microservices-Environment

./: .env.example  .gitignore  inference.py
oncall_env/: README.md  __init__.py  client.py  env_config.py  models.py  openenv.yaml  pyproject.toml
oncall_env/server/: .Dockerignore  Dockerfile  __init__.py  app.py  infrastructure.py  oncall_env_environment.py  requirements.txt  scenarios.py
